# hashline-tools

./: Cargo.toml  README.md
opencode-tools/: hashedit.ts  hashread.ts
pi-extension/: hashline-tools.ts
src/: lib.rs  main.rs
tests/: duplicate_test.rs  snapshot_tests.rs
tests/snapshots/: snapshot_tests__snapshot_apply_edits_empty_content.snap  snapshot_tests__snapshot_apply_edits_empty_new_text_fuzzy_replace.snap  snapshot_tests__snapshot_apply_edits_single_line.snap  snapshot_tests__snapshot_apply_edits_to_empty_file.snap  snapshot_tests__snapshot_apply_hashline_edits_append.snap  snapshot_tests__snapshot_apply_hashline_edits_append_eof.snap  snapshot_tests__snapshot_apply_hashline_edits_empty_content.snap  snapshot_tests__snapshot_apply_hashline_edits_empty_new_text.snap  snapshot_tests__snapshot_apply_hashline_edits_multiple_operations.snap  snapshot_tests__snapshot_apply_hashline_edits_prepend.snap  snapshot_tests__snapshot_apply_hashline_edits_prepend_bof.snap  snapshot_tests__snapshot_apply_hashline_edits_replace_range.snap  snapshot_tests__snapshot_apply_hashline_edits_replace_single.snap  snapshot_tests__snapshot_apply_hashline_edits_single_line.snap  snapshot_tests__snapshot_apply_hashline_edits_to_empty_file.snap  snapshot_tests__snapshot_apply_hashline_edits_with_special_characters.snap  snapshot_tests__snapshot_cmd_edit_hash_mismatch.snap  snapshot_tests__snapshot_cmd_edit_insert_after.snap  snapshot_tests__snapshot_cmd_edit_insert_after_last_line.snap  snapshot_tests__snapshot_cmd_edit_line_beyond_file.snap  (+41 more)
