[package]
name = "hashline-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twox-hash = "1"
similar = "2"

[dev-dependencies]
tempfile = "3"
insta = "1"
regex = "1"
[lib]
name = "hashline_tools"
path = "src/lib.rs"

[[bin]]
name = "hashline-tools"
path = "src/main.rs"